# ProjetTechno2021-TUI

./: .gitignore  CMakeLists.txt  Makefile  README.md  auxiliars.c  auxiliars.h  docConfiguration.conf  game.c  game.h  game_aux.c  game_aux.h  game_exemple.c  game_ext.c  game_struct.h  game_test_fclaisse.c  game_test_gdindart.c  game_test_millhe.c  game_text.c  gitlab-ci.yml  stack.h  stack_test.c
libgame/: CMakeLists.txt  auxiliars.c  auxiliars.h  game.c  game.h  game_aux.c  game_ext.c  game_struct.h
libpilefile/: CMakeLists.txt  list.c  list.h  pile.c  pile.h
libpilefile/tests/: CMakeLists.txt  file_test.c  pile_test.c
libstack/: CMakeLists.txt  stack.c  stack.h  stack_test.c
test/: CMakeLists.txt  game_test_fclaisse.c  game_test_gdindart.c  game_test_millhe.c  stack_test.c
